# templates_rust_standard

./: .cruft.json  README.md
.github/workflows/: trigger-cruft-update.yml  trigger-cruft-update.yml.rej
{{cookiecutter.project_name}}/: Cargo.toml
