[package]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# FYI: https://blessed.rs/crates
[dependencies]
anyhow = "1.0.79"
serde = "1.0.196"
tracing = "0.1.40"

[dev-dependencies]
cargo-nextest = "0.9.67"
clippy = "0.0.302"
rustfmt = "0.10.0"
